--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.487.0",
+    "moment": "^2.30.1",
     "motion": "^12.7.3",
     "next": "15.3.0",
     "react": "^19.0.0",
