--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,26 +1,22 @@
 {
     "version": 2,
-    "builds": [{ "src": "server.js", "use": "@vercel/node" }],
+    "builds": [
+      {
+        "src": "server.js",
+        "use": "@vercel/node"
+      }
+    ],
     "routes": [
       {
         "src": "/api/v1/(.*)",
         "dest": "/server.js",
-        "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"],
-        "headers": {
-          "Access-Control-Allow-Origin": "*",
-          "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
-          "Access-Control-Allow-Credentials": "true"
-        }
+        "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"]
       },
       {
-        "src": "(.*)",
+        "src": "/(.*)",
         "dest": "/server.js",
-        "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"],
-        "headers": {
-          "Access-Control-Allow-Origin": "*",
-          "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
-          "Access-Control-Allow-Credentials": "true"
-        }
+        "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"]
       }
     ]
   }
+  
