--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon dev",
-    "build": "nodemon build",
-    "start": "nodemon start"
-  },
+  "dev": "nodemon server.js",
+  "start": "node server.js"
+},
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
