--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,13 +26,14 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@tabler/icons-react": "^3.31.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
-    "motion": "^12.7.3",
+    "motion": "^12.9.2",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
