--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.30.1",
     "motion": "^12.9.2",
     "next": "15.3.0",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
@@ -49,6 +50,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
