--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo 'No build step needed for Node.js backend'"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -14,7 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "fast-csv": "^5.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
