--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "build": "echo 'No build step needed for Node.js backend'"
+    "build": "build server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
-    "express": "^4.19.2",
+    "express": "^5.1.0",
     "fast-csv": "^5.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
