--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -55,9 +55,7 @@ jobs:
 
       - name: Add EC2 to Known Hosts
         # Add the EC2 instance's host key to known_hosts to prevent SSH warnings
-        run: |
-          echo "EC2_IP is: ${{ secrets.EC2_IP }}"
-          ssh-keyscan ${{ secrets.EC2_IP }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan ${{ secrets.EC2_IP }} >> ~/.ssh/known_hosts
 
       - name: Upload Artifacts to EC2 using rsync
         env:
