--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -86,18 +86,20 @@ jobs:
             npm install --force
 
             # Create the .env file with the specified environment variables
-            cat > /home/ubuntu/jobvista-backend/.env << EOT
-            EMAIL_ID=${{ secrets.EMAIL_ID }}
-            EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}
-            JWT_SECRET=${{ secrets.JWT_SECRET }}
-            MONGO_URL=${{ secrets.MONGO_URL }}
-            PORT=${{ vars.BACKEND_PORT || '4050' }}
-            FRONTEND_URL=${{ vars.FRONTEND_URL }}
-            NODE_ENV=production
-            CLOUDANARY_CLOUD_NAME=${{ secrets.CLOUDANARY_CLOUD_NAME }}
-            CLOUDANARY_APIKEY=${{ secrets.CLOUDANARY_APIKEY }}
-            CLOUDANARY_SECRETS=${{ secrets.CLOUDANARY_SECRETS }}
-            EOT
+            cat > /home/ubuntu/jobvista-backend/.env << 'EOT'
+EMAIL_ID=${{ secrets.EMAIL_ID }}
+EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}
+JWT_SECRET=${{ secrets.JWT_SECRET }}
+MONGO_URL=${{ secrets.MONGO_URL }}
+PORT=${{ vars.BACKEND_PORT || '4050' }}
+FRONTEND_URL=${{ vars.FRONTEND_URL }}
+NODE_ENV=production
+CLOUDANARY_CLOUD_NAME=${{ secrets.CLOUDANARY_CLOUD_NAME }}
+CLOUDANARY_APIKEY=${{ secrets.CLOUDANARY_APIKEY }}
+CLOUDANARY_SECRETS=${{ secrets.CLOUDANARY_SECRETS }}
+GOOGLE_APIKEY=${{ secrets.GOOGLE_APIKEY }}
+GOOGLE_CLIENTID=${{ secrets.GOOGLE_CLIENTID }}
+EOT
 
             # Install PM2 globally if not already installed
             if ! command -v pm2 &> /dev/null; then
