--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -127,8 +127,8 @@ jobs:
             sudo bash -c 'cat <<EOT > /home/ubuntu/jobvista-frontend/.env
             AUTH_TRUST_HOST=https://jobvista.tech
             NEXT_PUBLIC_NODE_ENV=production
-            NEXT_PUBLIC_API_URL=${{ vars.NEXT_PUBLIC_API_URL }}/api/v1
-            API_URL=${{ vars.NEXT_PUBLIC_API_URL }}
+            NEXT_PUBLIC_API_URL=${{ vars.NEXT_PUBLIC_API_URL }}
+            API_URL=${{ vars.NEXT_PUBLIC_API_URL }}api/v1
             EOT'
             
             # Stop and delete the previous application instance (if it exists)
