--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.30.1",
     "motion": "^12.9.2",
     "next": "15.3.0",
+    "nextjs-toploader": "^3.8.16",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
